# SELQIE_LITE_2

./: .gitignore  LICENSE  README.md  water_shutdown.py
.claude/: settings.json
actuation/: README.md
actuation/actuation_bringup/: CMakeLists.txt  package.xml
actuation/actuation_bringup/launch/: can.launch.py  cubemars.launch.py  odrive.launch.py
actuation/actuation_msgs/: CMakeLists.txt  package.xml
actuation/actuation_msgs/msg/: CanFrame.msg  MotorCommand.msg  MotorConfig.msg  MotorEstimate.msg  MotorInfo.msg
actuation/can_bus/: CMakeLists.txt  README.md  package.xml
actuation/can_bus/src/: can_bus_node.cpp
actuation/cubemars_calibration/: package.xml  setup.cfg  setup.py
actuation/cubemars_calibration/config/: calibration.yaml
actuation/cubemars_calibration/cubemars_calibration/: calibration_node.py
actuation/cubemars_calibration/launch/: calibration.launch.py
actuation/cubemars_v2_ros/: package.xml  setup.py
actuation/cubemars_v2_ros/cubemars_v2_ros/: motor_node.py  servo_protocol.py
actuation/cubemars_v2_ros/test/: test_motor_node_servo.py  test_servo_protocol.py
actuation/motor_interfaces/: CMakeLists.txt  package.xml
actuation/motor_interfaces/msg/: MotorState.msg
battery/: package.xml  setup.py
battery/battery/: tinybms_voltage_uart.py
battery/launch/: tinybms_voltage_uart.launch.py
docs/: JetsonAGX-Setup.md  SELQIE_LITE_2_SOP.md  cubemars_motor_control_diagnostic.md
jetson/jetson_drivers/: package.xml  setup.cfg  setup.py
jetson/jetson_drivers/jetson_drivers/: gpio_node.py  status_node.py
jetson/jetson_msgs/: CMakeLists.txt  package.xml
jetson/jetson_msgs/msg/: JetsonStatus.msg
leak_sensor/: package.xml  setup.py
leak_sensor/launch/: leak_sensor.launch.py
leak_sensor/leak_sensor/: leak_sensor_node.py
leak_sensor/resource/: leak_sensor
leg_control/: README.md
leg_control/leg_control_bringup/: CMakeLists.txt  package.xml
leg_control/leg_control_bringup/config/: fivebar.yaml  stride_generation.yaml
leg_control/leg_control_bringup/launch/: fivebar.launch.py  leg_trajectory_publisher.launch.py  stride_generation.launch.py
leg_control/leg_control_msgs/: CMakeLists.txt  package.xml
leg_control/leg_control_msgs/msg/: LegCommand.msg  LegEstimate.msg  LegTrajectory.msg
leg_control/leg_kinematics/: CMakeLists.txt  package.xml
leg_control/leg_kinematics/include/leg_kinematics/: leg_kinematics_node.hpp
leg_control/leg_kinematics/src/: fivebar2d_node.cpp
leg_control/leg_trajectory_publisher/: CMakeLists.txt  package.xml
leg_control/leg_trajectory_publisher/src/: leg_trajectory_publisher_node.cpp
leg_control/leg_trajectory_publisher/trajectories/: crawl.txt  jump.txt  swim.txt  walk.txt  walk_20cm_stride.txt
leg_control/stride_generation/: CMakeLists.txt  package.xml
localization/localization_bringup/: CMakeLists.txt  package.xml
localization/marker_localization/: CMakeLists.txt  package.xml
mapping/mapping_bringup/: CMakeLists.txt  package.xml
mapping/terrain_mapping/: CMakeLists.txt  package.xml
matlab/: FivebarKinematicEquations.m  GenerateROSMessages.m  ParseROSBag.m  StrideGenerationVisualizer.m  bag2avi.m
mpc/legged_mpc/: CMakeLists.txt  package.xml
mpc/legged_mpc/include/legged_mpc/: legged_mpc.hpp  osqp_mpc.hpp
mpc/legged_mpc/src/: body_trajectory_node.cpp  foothold_planner_node.cpp  legged_mpc_node.cpp  swing_leg_node.cpp
mpc/mpc_bringup/: CMakeLists.txt  package.xml
mpc/mpc_msgs/: CMakeLists.txt  package.xml
planning/gait_planning/: CMakeLists.txt  README.md  package.xml
planning/gait_planning/include/gait_planning/: gait_dynamics.hpp  gait_planning_model.hpp
planning/gait_planning/src/: gait_planning_node.cpp
planning/local_planning/: CMakeLists.txt  package.xml
planning/local_planning/include/local_planning/: local_planning_node.hpp
planning/local_planning/src/: jump_planning_node.cpp  sink_planning_node.cpp  stand_planning_node.cpp  swim_planning_node.cpp  walk_planning_node.cpp
planning/planning_bringup/: CMakeLists.txt  package.xml
reed_switch/: package.xml  setup.cfg  setup.py
reed_switch/launch/: reed_switch.launch.py
reed_switch/reed_switch/: reed_switch_node.py
reed_switch/resource/: reed_switch
selqie_bringup/: CMakeLists.txt  README.md  package.xml
selqie_bringup/launch/: actuation.launch.py  leg_control.launch.py  localization.launch.py  mapping.launch.py  marker_localization.launch.py  planning.launch.py  selqie_hw.launch.py  selqie_sim.launch.py  sensing.launch.py  simulation.launch.py  tf.launch.py  vision.launch.py  visualization.launch.py
sensing/: README.md
sensing/bar100_driver/: README.md  package.xml  setup.cfg  setup.py
sensing/imu_calibration/: CMakeLists.txt  package.xml
sensing/leak_sensor/: package.xml  setup.cfg  setup.py
sensing/reed_switch/: package.xml  setup.py
sensing/sensing_bringup/: CMakeLists.txt  package.xml
sensing/servo/: package.xml  setup.py
sensing/ws2812b_ros/: README_ws2812b_ros.md  setup.py
simulation/mujoco_ros2/: CMakeLists.txt  package.xml
simulation/mujoco_ros2/include/mujoco_ros2/: mujoco.hpp
simulation/mujoco_ros2/src/: mujoco_node.cpp
simulation/selqie_models/: CMakeLists.txt  package.xml
simulation/simulation_bringup/: CMakeLists.txt  package.xml
tmux/: .tmux.conf  selqie.sh  selqie_mujoco.sh
tools/: README.md  configure_odrive_mj5208.py  install.sh  load_can.service  loadcan_jetson.sh  update_stereo_calibration.sh
ui/: README.md
ui/selqie_python/: package.xml  setup.cfg  setup.py
ui/selqie_tools/: package.xml  setup.cfg  setup.py
ui/selqie_ui/: package.xml  setup.cfg  setup.py
ui/ui_bringup/: CMakeLists.txt  package.xml
vision/: README.md
vision/pointcloud_filters/: CMakeLists.txt  package.xml
vision/stereo_usb_cam/: CMakeLists.txt  README.md  package.xml
vision/stereo_usb_cam/src/: stereo_usb_cam.cpp
vision/vision_bringup/: CMakeLists.txt  package.xml
ws2812b_ros/: package.xml  setup.cfg  setup.py
ws2812b_ros/launch/: led_demo.launch.py  leds.launch.py  rainbow_fade.launch.py
ws2812b_ros/ws2812b_ros/: led_tester.py  ws2812b_spi.py
(+65 files in other folders)
