<?xml version="1.0"?>
<package format="3">
  <name>reed_switch</name>
  <version>0.1.0</version>
  <description>Reed switch monitor node using Jetson GPIO to publish switch state.</description>

  <maintainer email="you@example.com">Ryan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-jetson-gpio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
