<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cubemars_calibration</name>
  <version>1.0.0</version>
  <description>
    Automatic PD gain calibration for CubeMars AK-series motors.
    Performs step-response and velocity-tracking tests per motor joint and
    writes optimised position_kp, position_kd, and velocity_kd values to YAML.
  </description>
  <maintainer email="rykaczmarczyk@gmail.com">SELQIE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>motor_interfaces</exec_depend>
  <exec_depend>actuation_bringup</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
